# nerdy

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  interviews.md  prd.md  pyproject.toml  requirements.md  requirements.txt  run_pipeline.py  start.sh  video-ad-creation-best-practices.md
.claude/: settings.local.json
.cursor-safety/: git-diff-before-main.patch  git-diff-staged-before-main.patch  git-status-before-main.txt  git-unmerged-before-main.txt
app/: config.py  db.py  requirements.txt
data/: brand_knowledge.json  calibration_results.json  config.yaml  cost_manifest.json  hooks_library.json  pattern_database.json  reference_ads.json  reference_ads_labeled.json  simulated_performance.py
docs/: DEVLOG.md  DOCUMENTATION_INDEX.md
evaluate/: __init__.py  accuracy_report.py  brief_adherence.py  coherence_checker.py  confidence_router.py  correlation.py  cost_reporter.py  dimensions.py  evaluation_pipeline.py  evaluator.py  frame_extractor.py  image_cost_tracker.py  image_evaluator.py  image_scorer.py  image_selector.py  performance_correlation.py  performance_schema.py  spc_monitor.py  video_attributes.py  video_coherence.py  video_evaluator.py  video_scorer.py  weight_recalibrator.py
generate/: __init__.py  ab_image_variants.py  ab_variants.py  ad_generator.py  aspect_ratio_batch.py  brand_voice.py  brief_expansion.py  competitive.py  competitive_trends.py  compliance.py  gemini_client.py  hooks.py  image_generator.py  image_model_router.py  model_router.py  seeds.py  style_experiments.py  visual_spec.py  (+1 more)
(+566 files in other folders)
